# Crawler_Data

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
data/raw/: README.md
site/: index.html  price.html
src/crawler/: analyze_prices.py  crawler.py  crawler.py.save
