[project]
name = "crawling-analysis-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "pandas>=2.3.2",
    "pillow>=11.3.0",
    "pytesseract>=0.3.13",
    "requests>=2.32.5",
    "streamlit>=1.49.1",
]
