[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gym-price-crawler"
version = "0.1.0"
description = "Korean gym price crawler with BFS + heuristics, charset-safe fetching"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Your Name", email = "you@example.com" }]
dependencies = [
  "requests",
  "beautifulsoup4",
  "pandas",
  "cloudscraper",
]

[project.optional-dependencies]
ocr = ["pillow", "pytesseract"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["crawler*"]
